--- a/webProject/mario.css
+++ b/webProject/mario.css
@@ -162,7 +162,7 @@ nav ul li a[href="#gamedisk"]:hover {
 }
 
 #gamedisk {
-  margin-top: -16%;
+  margin-top: 0;
   padding-top: 30%;
   z-index: 0;
   background: linear-gradient(to bottom right, rgba(29, 161, 242, 0.7), rgba(9, 103, 160, 0.7)), url(https://gonintendo.com/system/file_uploads/uploads/000/046/857/original/super-mario-run-nintendo-investors-market-cap.jpg);
