--- a/webProject/switchstyle.css
+++ b/webProject/switchstyle.css
@@ -3,8 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-
 @keyframes display{
   from{
       transform:scaleY(0);
@@ -19,17 +17,15 @@ html {
 
 body {
   font-family: Montserrat;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
-.background_img
-{
-  background-image: url('https://www.androidpolice.com/wp-content/uploads/2017/09/nexus2cee_qukdZ7p.jpg');
-  background-size: cover;
-}
+
 .countainer {
   height: calc(100vh - 0rem);
   padding: 2rem;
-  background: linear-gradient(105deg, rgb(255, 255, 255) 45%, transparent 45%);
+  background-image: linear-gradient(105deg, rgb(0, 0, 0) 45%, transparent 45%),url('https://pisces.bbystatic.com/image2/BestBuy_US/images/products/5670/5670003cv14d.jpg');
+
+  background-size: cover;
 }
 .countainer h1 {
   font-size: 8rem;
@@ -38,7 +34,7 @@ body {
 }
 .countainer h2 {
   font-size: 2.5rem;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   margin-bottom: 3rem;
 }
 .countainer h3 {
@@ -56,7 +52,7 @@ body {
 
     -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  background-image:url('https://i.pinimg.com/originals/7d/75/63/7d7563b859df5cd17b606ea5253bcf30.jpg');
+  background-image:url('https://s4827.pcdn.co/wp-content/uploads/2017/11/iphone_x_wallpaper_blur_2.jpg');
   background-position:210px;
   letter-spacing:0.3rem;
   font-weight:700;
@@ -70,16 +66,16 @@ body {
 
     -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  background-image: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1)),url('https://i.pinimg.com/originals/7d/75/63/7d7563b859df5cd17b606ea5253bcf30.jpg');
+  background-image:url('https://pbs.twimg.com/media/CLwaMRvUMAU0q67.jpg');
   background-position:210px;
   letter-spacing:0.3rem;
   font-weight:700;
+  color:white;
   transform-origin:left;
   animation:display 1s;
-  
 }
 
-.Pbuttons .play-button {
+.buttons .play-button {
   
   text-decoration: none !important;
   color: rgb(0, 0, 0);
@@ -89,44 +85,22 @@ body {
   transition: all .3s;
   font-size:2rem;
   margin-top:2rem;
-  width:150px;
   text-decoration: none !important;
-  padding-bottom: 20px;
   transform-origin:left;
   animation:display 1s;
+ 
+ 
 }
-.Pbuttons .play-button:hover {
+.buttons .play-button:hover {
   background: linear-gradient(to right, #ff5b5b, #ff0000);
   border: 1.5px solid #ff0000;
   cursor: pointer;
   text-decoration: none !important;
 
 }
-.Pbuttons .play-button:active {
+.buttons .play-button:active {
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
           text-decoration: none !important;
-}
-#gamedisk
-{
-  height:150vh;
-  margin-bottom:-120px;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-}
-#gamedisk .gamedisk-text h1
-{
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-image:url('https://s4827.pcdn.co/wp-content/uploads/2017/11/iphone_x_wallpaper_blur_2.jpg');
-  background-position:210px;
-  transform-origin:left;
-  animation:display 1s;
-  
-}
-#gamedisk .gamedisk-text h2
-{
-  font-size: 28px;
-  margin-bottom: 20px;
-  transform-origin:left;
-  animation:display 1s;
+ 
 }
